--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red_custom">#FFed1b34</color>
+    <color name="red_dark">#e6123d</color>
+    <color name="red_amazing">#e71b44</color>
 </resources>
