--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="red_custom">#FFed1b34</color>
     <color name="red_dark">#e6123d</color>
     <color name="red_amazing">#e71b44</color>
+    <color name="gray_category">#FFF1F0EE</color>
 </resources>
